--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="cApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
