--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="cWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ButtonFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CalculatorProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ButtonFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CalculatorProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
