Implemented AddCommand.h set to inheirent from IBaseCommand

--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="CalculatorProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IBaseCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AddCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
@@ -39,6 +45,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CalculatorProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IBaseCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AddCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
