Implemented SubtractCommand.h which inheirents from IBaseCommand

--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="cApp.h" />
     <ClInclude Include="cWindow.h" />
     <ClInclude Include="IBaseCommand.h" />
+    <ClInclude Include="SubtractCommand.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddCommand.cpp" />
@@ -33,6 +34,7 @@
     <ClCompile Include="cApp.cpp" />
     <ClCompile Include="cWindow.cpp" />
     <ClCompile Include="IBaseCommand.cpp" />
+    <ClCompile Include="SubtractCommand.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
