--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="AddCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SubtractCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AddCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SubtractCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
