Implemented DivideCommand, switched execute from Void to Int so data can be retrieved from the functions, cleaned up code and ensured execution

--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="MultiplyCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DivideCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cApp.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MultiplyCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DivideCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
