--- a/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj
+++ b/Wade_Eric-Calculator Lab/Wade_Eric-Calculator Lab.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="CalculatorProcessor.h" />
     <ClInclude Include="cApp.h" />
     <ClInclude Include="cWindow.h" />
+    <ClInclude Include="DivideCommand.h" />
     <ClInclude Include="IBaseCommand.h" />
     <ClInclude Include="MultiplyCommand.h" />
     <ClInclude Include="SubtractCommand.h" />
@@ -34,6 +35,7 @@
     <ClCompile Include="CalculatorProcessor.cpp" />
     <ClCompile Include="cApp.cpp" />
     <ClCompile Include="cWindow.cpp" />
+    <ClCompile Include="DivideCommand.cpp" />
     <ClCompile Include="IBaseCommand.cpp" />
     <ClCompile Include="MultiplyCommand.cpp" />
     <ClCompile Include="SubtractCommand.cpp" />
